--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,7 @@ dnspython==2.8.0
 docstring_parser==0.17.0
 email-validator==2.3.0
 emoji==2.15.0
+et_xmlfile==2.0.0
 fastapi==0.128.0
 fastapi-cli==0.0.20
 fastapi-cloud-cli==0.8.0
@@ -44,7 +45,7 @@ httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 httpx-sse==0.4.3
-huggingface_hub==1.2.3
+huggingface-hub==0.36.0
 identify==2.6.15
 idna==3.11
 instructor==1.13.0
@@ -58,8 +59,10 @@ langchain-classic==1.0.1
 langchain-community==0.4.1
 langchain-core==1.2.5
 langchain-google-genai==4.1.2
+langchain-huggingface==1.2.0
 langchain-openai==1.1.6
 langchain-text-splitters==1.1.0
+langchain-unstructured==1.0.1
 langdetect==1.0.9
 langgraph==1.0.5
 langgraph-checkpoint==3.0.1
@@ -71,6 +74,8 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 marshmallow==3.26.2
 mdurl==0.1.2
+mpmath==1.3.0
+msoffcrypto-tool==5.4.2
 multidict==6.7.0
 multiprocess==0.70.18
 mypy_extensions==1.1.0
@@ -79,8 +84,24 @@ networkx==3.6
 nltk==3.9.2
 nodeenv==1.10.0
 numpy==2.4.0
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
 olefile==0.47
 openai==2.14.0
+openpyxl==3.1.5
 orjson==3.11.5
 ormsgpack==1.12.1
 packaging==24.2
@@ -113,6 +134,7 @@ pytz==2025.2
 PyYAML==6.0.3
 ragas==0.4.2
 RapidFuzz==3.14.3
+redis==7.1.0
 regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
@@ -120,18 +142,28 @@ rich==14.2.0
 rich-toolkit==0.17.1
 rignore==0.7.6
 rsa==4.9.1
+safetensors==0.7.0
+scikit-learn==1.8.0
 scikit-network==0.33.5
 scipy==1.16.3
+sentence-transformers==5.2.0
 sentry-sdk==2.48.0
+setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8.1
 SQLAlchemy==2.0.45
 starlette==0.50.0
+sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.12.0
+tokenizers==0.22.2
+torch==2.9.1
 tqdm==4.67.1
+transformers==4.57.3
+triton==3.5.1
 ty==0.0.8
 typer==0.21.0
 typer-slim==0.21.0
@@ -150,6 +182,7 @@ watchfiles==1.1.1
 webencodings==0.5.1
 websockets==15.0.1
 wrapt==2.0.1
+xlrd==2.0.2
 xxhash==3.6.0
 yarl==1.22.0
 zstandard==0.25.0
