--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -120,7 +120,7 @@ pyasn1_modules==0.4.2
 pycparser==2.23
 pydantic==2.12.5
 pydantic-extra-types==2.10.6
-pydantic-settings==2.12.0
+pydantic-config==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 pypdf==6.5.0
